commit and push

--- a/Portfolio Project/Project Portfolio/portfolio.css
+++ b/Portfolio Project/Project Portfolio/portfolio.css
@@ -83,7 +83,7 @@
     height: 600px;
     margin: 0 auto;
     padding: 10%;
-    background-image: url(./images/wp10547767.webp);
+    background-image: url(./images/pexels-danny-meneses-943096.jpg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
