--- a/Python/Week 2/Day 5/Core/reg_log_app/flask_app/templates/index.html
+++ b/Python/Week 2/Day 5/Core/reg_log_app/flask_app/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="display-4 mb-2 text-danger">Welcome To Reg Log</h1>
+        <h1 class="display-4 m-3 text-danger">Welcome To Reg Log</h1>
         <div class="d-flex justify-content-between mt-2">
             <div class="col-5 card shadow p-2">
                 <div class="card head text-center h2 display-6 p-2">
@@ -44,19 +44,19 @@
 
                 </div>
             </div>
-            <div class="col-5 card shadow">
-                <div class="card head text-center h2 display-6 mt-2">
+            <div class="col-5 card shadow p-2">
+                <div class="card head text-center h2 display-6 m-3 p-2">
                     Login
                 </div>
                 {% for message in get_flashed_messages() %}
                         <li class="h4 text-danger text-center p-5"> {{message}} </li>
                     {% endfor %}
                     <form action="/login" method="post">
-                        <div class="form-group">
+                        <div class="form-group m-3 text-center">
                             <label for="">Email:</label>
                             <input type="email" class="form-control" name="email">
                         </div>
-                        <div class="form-group">
+                        <div class="form-group m-3 text-center">
                             <label for="">Password:</label>
                             <input type="text" class="form-control" name="password">
                         </div>
